# ffcapm

./: LICENSE  README.md  main.py  pyproject.toml
examples/: aapl_analysis.py
ffcapm/: __init__.py  data.py  metrics.py  models.py  plot.py
tests/: test_models.py
